--- a/HTML/style.css
+++ b/HTML/style.css
@@ -23,7 +23,7 @@
 }
 
 .logo {
-    background-image: url(../Images/amazon_logo.png);
+    background-image: url(./Images/amazon_logo.png);
     height: 50px;
     width: 100%;
     background-size: cover;
@@ -127,7 +127,7 @@ span {
 
 /** hero sectrion **/
 .hero-section {
-    background-image: url(../Images/hero_image.jpg);
+    background-image: url(./Images/hero_image.jpg);
     background-size: cover;
     height: 350px;
     display: flex;
